2008-05-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* misc/validate-registry.py:
	* common/validate-registry.py:
	  Move from misc to common.
	* Makefile.am:
	* common/Makefile.am:
	* common/common.mk:
	  Fix up files for the move.

2008-05-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* misc/validate-registry.py:
	  Set up the package path as well.

2008-05-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/common.mk:
	  Run inside environment so flumotion can be imported.

2008-05-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* misc/validate-registry.py:
	  Add a simple script to validate the registry.
	* Makefile.am:
	* common/common.mk:
	  Run it as part of make check.
	* flumotion/common/bundle.py:
	  Add a method to get bundle names ...
	* flumotion/test/test_bundle.py:
	  ... and test it.

2008-04-30  Johan Dahlin  <johan@flumotion.com>

	* flumotion/ui/url.py: Fix typo which broke the case 
	where gnomevfs is not installed.

2008-04-30  Johan Dahlin  <johan@flumotion.com>

	* flumotion/common/fxml.py:
	* flumotion/common/xmlwriter.py:
	* flumotion/manager/config.py:
	* flumotion/test/Makefile.am:
	* flumotion/test/test_common_xmlwriter.py:
	* flumotion/wizard/configurationwriter.py:
	Wrap long lines in the xml output by using xmlwriter when
	exporting xml from the planet. Sort the components and
	add a new function for ordering components by type.
	Fixes #939.

2008-04-30  Johan Dahlin  <johan@flumotion.com>

	* flumotion/test/Makefile.am:
	* flumotion/test/test_common_xmlwriter.py:
	Add xmlwriter tests.

2008-04-29  Arek Korbik  <arkadini@gmail.com>

	* flumotion/component/encoders/theora/theora.py (Theora.do_check):
	Import the used modules and invoke the check function properly.

2008-04-28  Johan Dahlin  <johan@gnome.org>

	* flumotion/wizard/configurationwizard.py (ConfigurationWizard.waitForTask):
	prevent a raise from happening when shutting down the wizard, check